--- a/l5/fpga/lab5Katelyn/ece453_top_level_summary.html
+++ b/l5/fpga/lab5Katelyn/ece453_top_level_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>ece453_top_level Project Status (03/05/2012 - 15:16:23)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ece453_top_level Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab5Katelyn.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 12.4</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/*.xmsgs?&DataKey=Warning'>594 Warnings (195 new, 0 filtered)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/*.xmsgs?&DataKey=Warning'>594 Warnings (195 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -167,21 +167,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:15:50 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/xst.xmsgs?&DataKey=Warning'>335 Warnings (194 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/xst.xmsgs?&DataKey=Info'>4 Infos (1 new, 0 filtered)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:15:54 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:15:58 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/map.xmsgs?&DataKey=Warning'>146 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new, 0 filtered)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:16:05 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/par.xmsgs?&DataKey=Warning'>58 Warnings (1 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:53:48 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/xst.xmsgs?&DataKey=Warning'>335 Warnings (194 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/xst.xmsgs?&DataKey=Info'>4 Infos (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:53:48 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:53:48 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/map.xmsgs?&DataKey=Warning'>146 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:53:48 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/par.xmsgs?&DataKey=Warning'>58 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:16:08 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new, 0 filtered)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:16:16 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>55 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new, 0 filtered)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:53:48 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\ece453_top_level.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Mar 5 15:53:48 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>55 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Mar 5 15:16:16 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Mar 5 15:16:22 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Mar 5 15:53:48 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/lab5Katelyn\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Mar 5 15:53:48 2012</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/05/2012 - 15:16:23</center>
+<br><center><b>Date Generated:</b> 03/05/2012 - 15:57:12</center>
 </BODY></HTML>
