--- a/l5/fpga/l5/ece453_top_level_summary.html
+++ b/l5/fpga/l5/ece453_top_level_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>ece453_top_level Project Status (03/05/2012 - 19:36:55)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ece453_top_level Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>l5.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 12.4</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/*.xmsgs?&DataKey=Warning'>590 Warnings (2 new, 0 filtered)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/*.xmsgs?&DataKey=Warning'>590 Warnings (2 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -167,13 +167,13 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:24 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/xst.xmsgs?&DataKey=Warning'>334 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/xst.xmsgs?&DataKey=Info'>4 Infos (0 new, 0 filtered)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:24 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/xst.xmsgs?&DataKey=Warning'>334 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/xst.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:28 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:32 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/map.xmsgs?&DataKey=Warning'>145 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (1 new, 0 filtered)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:38 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/par.xmsgs?&DataKey=Warning'>57 Warnings (2 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:32 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/map.xmsgs?&DataKey=Warning'>145 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:38 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/par.xmsgs?&DataKey=Warning'>57 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:40 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new, 0 filtered)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:49 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>54 Warnings (0 new, 0 filtered)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new, 0 filtered)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:40 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\ece453_top_level.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Mar 5 19:36:49 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>54 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/vmware-shared/ece453/l5/fpga/l5\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
@@ -183,5 +183,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/05/2012 - 19:36:55</center>
+<br><center><b>Date Generated:</b> 03/06/2012 - 09:44:22</center>
 </BODY></HTML>
